fix: fix dark mode color of sort header (#247)

--- a/src/angular/table/sort/sort-header.scss
+++ b/src/angular/table/sort/sort-header.scss
@@ -21,13 +21,11 @@
   }
 
   &:hover .sbb-sort-header-container {
-    // TODO: check
-    color: var(--sbb-color-primary125);
+    color: light-dark(var(--sbb-color-primary125), var(--sbb-color-primary85));
   }
 }
 
 .sbb-sort-header-sorted {
-  // TODO: check
   color: var(--sbb-color-2);
 }
 
